<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/no_image" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_harga"
            style="@style/TextContent.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummy_value"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_detail"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/specification" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/cpu" />

                <TextView
                    android:id="@+id/tv_spek_cpu"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_display" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/size" />

                <TextView
                    android:id="@+id/tv_spek_ukuran"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/kamera" />

                <TextView
                    android:id="@+id/tv_kamera"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_camera" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/battery" />

                <TextView
                    android:id="@+id/tv_baterai"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_battery" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/sumber"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/logo_priceprice" />

            <TextView
                style="@style/TextContent"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/web"
                android:textColor="@android:color/black"
                android:textStyle="italic" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>